Renamed CSS class sci to socialNetworks and fixed a background color display bug on small screens (the background was staying blue instead of black).

--- a/app/globals.css
+++ b/app/globals.css
@@ -53,7 +53,7 @@ section {
 
 section.active .logo,
 section.active .content,
-section.active .sci {
+section.active .socialNetworks {
     transform: scale(0);
 }
 
@@ -225,12 +225,14 @@ header .toggle.active {
 }
 
 .content .contentBx a:hover {
+    background: #1de5ff;
+    color: #111;
     box-shadow:
         0 0 15px #1de5ff,
         0 0 40px #1de5ff;
 }
 
-.sci {
+.socialNetworks {
     position: absolute;
     bottom: 40px;
     display: flex;
@@ -242,13 +244,13 @@ header .toggle.active {
     transform-origin: left;
 }
 
-.sci li {
+.socialNetworks li {
     list-style: none;
     width: 50px;
     height: 50px;
 }
 
-.sci li a {
+.socialNetworks li a {
     display: inline-block;
     width: 100%;
     height: 100%;
@@ -259,18 +261,18 @@ header .toggle.active {
     border-radius: 50%;
 }
 
-.sci li:hover a {
+.socialNetworks li:hover a {
     background: white;
 }
 
-.sci li a img {
+.socialNetworks li a img {
     filter: invert(1);
     transform: scale(0.6);
     width: 30px;
     height: 30px;
 }
 
-.sci li:hover a img {
+.socialNetworks li:hover a img {
     filter: invert(0);
 }
 
@@ -331,6 +333,10 @@ section.active .menu {
 @media (max-width: 1300px) {
     section {
         padding: 40px;
+    }
+
+    section.active {
+        background-color: #141821;
     }
 
     .imageBox:before {
